--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,11 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    // libs for openai api work in android project
+    implementation "com.aallam.openai:openai-client:2.1.3"
+    def ktor_version = '2.0.2'
+    implementation "io.ktor:ktor-client-android:$ktor_version"
+    implementation "io.ktor:ktor-utils-jvm:$ktor_version"
+    implementation "io.ktor:ktor-client-logging-jvm:$ktor_version"
 }
